fix alignment of recaptcha in signup.

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -262,6 +262,9 @@ label.major, #content h2 {
 #register_login .register .error {
   font-size:80%;
 }
+#register_login #recaptcha_area {
+  margin:1em 0;
+}
 #feedback {
   padding:0.2em 0.4em;
   position:absolute;
